flux/apps/hoyeslab/default/wallos/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wallos
  namespace: default
  labels:
    app.kubernetes.io/name: wallos
    app.kubernetes.io/instance: wallos
spec:
  strategy:
    # Recreate strategy required due to the ReadWriteOnce PVCs
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: wallos
      app.kubernetes.io/instance: wallos
  template:
    metadata:
      labels:
        app.kubernetes.io/name: wallos
        app.kubernetes.io/instance: wallos
    spec:
      containers:
        - name: wallos
          image: ghcr.io/ellite/wallos:5.8.3
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: db-storage
              mountPath: /var/www/html/db
            - name: logos-storage
              mountPath: /var/www/html/images/uploads/logos
      volumes:
        - name: db-storage
          persistentVolumeClaim:
            claimName: wallos-db
        - name: logos-storage
          persistentVolumeClaim:
            claimName: wallos-logos
